--- a/staff.html
+++ b/staff.html
@@ -1,7 +1,9 @@
 <!-- staff.html -->
---- layout: default ---
+---
+layout: default
+---
 
-<h1>Staff</h1>
+<h1>Authors</h1>
 
 <ul>
   {% for author in site.authors %}
